--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ body{
     font-family: sans-serif;
 }
 .main{
-    background: no-repeat center / cover url("https://wallpaperaccess.com/full/228499.jpg");
+    background: rgba(0, 0, 0, 0.3) url("https://wallpaperaccess.com/full/228499.jpg") no-repeat center /cover;
 }
 
 .header{
     height: 70px;
-    background-color: darkblue;
+    background-color: #360036;
     color:#F5D6D7;
     padding: 0 30px;
     display: flex;
@@ -47,7 +47,6 @@ body{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: rgba(0 , 0 , 0 , 0.3);
 }
 .info{
     position: relative;
